Fixing a stretched image in the promise page

--- a/apps/promise/static/css/main.css
+++ b/apps/promise/static/css/main.css
@@ -4379,7 +4379,6 @@ body {
 }
 .avatarbox img {
   width: 180px;
-  height: 180px;
   border: 1px solid #b81f1f;
   padding: 1px;
   background-color: #f6c7c7;
