--- a/apps/promise/static/less/pages/promise.less
+++ b/apps/promise/static/less/pages/promise.less
@@ -3,7 +3,7 @@
     margin-bottom: 20px;
 
     img {
-        .square(180px);
+        width: 180px;
         border: 1px solid @linkColor;
         padding: 1px;
         background-color: @lighterLinkColor;
